--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body {
     margin:0px;
   }
   a {
-    
+    color:darkblue;
+    font-family:Times;
     text-decoration:none;
+    
   }
   h1 { 
     margin-top:0px;
